[tool.poetry]
name = "py-helium-console-client"
version = "0.1.1"
description = "An unofficial Python Client library for the Helium Console API."
authors = ["Evan Diewald <evandiewald@gmail.com>"]
keywords = ["helium", "console"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/evandiewald/py-helium-console-client"
repository = "https://github.com/evandiewald/py-helium-console-client"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
requests = "^2.26.0"
certifi = "^2021.10.8"
idna = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
